# pyforensickit

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: report.html  timeline.csv
src/pyforensickit/cli/: main.py
src/pyforensickit/core/: case.py  hashing.py  metadata.py  report.py  timeline.py
src/templates/: report_template.html
tests/: conftest.py  test_case.py  test_hashing.py  test_metadata.py  test_report.py  test_timeline.py
