[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforensickit"
version = "0.1.1"
description = "Linux-based digital forensics command-line toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Samuel Selasi", email = "samelsekasi@gmail.com"}
]
dependencies = [
    "rich>=13.0.0",
    "python-magic>=0.4.27"
]

[project.scripts]
pyforensickit = "pyforensickit.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
